[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/git_for_godot/icons/NoCheckHover.svg" type="Texture" id=2]
[ext_resource path="res://addons/git_for_godot/icons/MenuIdle.svg" type="Texture" id=3]
[ext_resource path="res://addons/git_for_godot/icons/NoCheck.svg" type="Texture" id=4]
[ext_resource path="res://addons/git_for_godot/icons/MenuHover.svg" type="Texture" id=5]
[ext_resource path="res://addons/git_for_godot/remote_dock/remote_item.gd" type="Script" id=6]

[node name="RemoteItem" type="VBoxContainer"]
margin_right = 180.0
margin_bottom = 50.0
rect_min_size = Vector2( 180, 32 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoteDetails" type="Control" parent="."]
margin_right = 180.0
margin_bottom = 28.0
rect_min_size = Vector2( 32, 28 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureButton" parent="RemoteDetails"]
anchor_bottom = 1.0
margin_right = 28.0
rect_min_size = Vector2( 28, 28 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="RemoteDetails"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = 1.0
margin_right = -36.0
size_flags_horizontal = 3
text = "Remote name here"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="RemoteDetails"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
rect_min_size = Vector2( 20, 20 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoteBranchList" type="VBoxContainer" parent="."]
margin_top = 32.0
margin_right = 180.0
margin_bottom = 32.0
[connection signal="pressed" from="RemoteDetails/Menu" to="RemoteDetails" method="_on_Menu_pressed"]
